--- a/package.json
+++ b/package.json
@@ -4,6 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node -r dotenv/config app/app.js",
+    "dev": "nodemon -r dotenv/config app/app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
